--- a/display.css
+++ b/display.css
@@ -1,1 +1,12 @@
 @charset "UTF-8";
+
+
+.list{
+    width: 70%;
+    background-color: antiquewhite;
+}
+
+.text{
+    width: 70%;
+    background-color: chocolate;
+}
